    o #347892 by dww: Allow <any> option in Boolean filters.
    o #358314 by brmassa: Catch the exposed filter form so it doesn't process twice on a single view.
    o #154865 by Zack Rosen, josh_k and KarenS: Allow user contact form as a field.
    o #411880 by fgm: Add "options callback" to items using in_operator handler.

Views 2.5
  Bugs fixed:
    o #363817 by thePanz: Empty fields in table could still trigger separators.
    o #388952 by nikita@protsenko.com: Ensure taxonomy term validator sets the validated title when available.
    o #392176: Trim on word boundary would stop at newlines.
    o #415706 by dww: Fix broken relationship in search that caused SQL error.
    o #428742 by fralenuvol: Fix broken relationship causing sql error with multiple taxonomy term arguments.
    o #428102 with help from deviantintegral: Broken option_definition() causes warnings.

  Other changes:
    o #379382 by neochief: Add option to strip tags during advanced rendering.
    o #400914 by joachim: Add a link field to get to comments for a node that works just like the normal links.
    o #402650 by drewish: Bulk export views alphabetically by view name.
    o #349157 by yched: Support CCK build modes in node style.

Views 2.4
  Bugs fixed:
    o #371466 by dereine: Fix incorrect link to comments.
    o #371923 by noahb: Summaries could be distinct even when they should not be.
    o #368764: Fix User ID validator to actually have proper dependencies.
    o #375342 by dww: node_comment_statistics should be INNER joined because there is always 1:1 reference.
    o #372959: Archive view should not use AJAX by default.
    o #373155: Not clearing "many to one" data breaks some attachment displays.
    o #375000 by elcuco: View name should always be LTR.
    o #378534 by dww: Validators do not fire if argument === 0 due to PHP loose type conversions.
    o #378164 by yched: Unexposed taxonomy filter could accidentally stop working.